modified database methods and classes to be more in line with class examples

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -20,3 +20,12 @@ footer select {
 .hidden {
   display: none;
 }
+
+.change_rating_submit select{
+  margin: 0 0 1em 0;
+  
+}
+
+.button_login {
+  margin: 0 0 0 0;
+}
