--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -29,3 +29,13 @@ footer select {
 .button_login {
   margin: 0 0 0 0;
 }
+
+.pagination {
+  text-align: center;
+  padding: 0;
+}   
+
+hr {
+  padding: 0 0 1em 0;
+}
+
