--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,7 +1,3 @@
-select {
-  margin: 0;
-}
-
 .search {
   margin: 0;
   padding: 20px 20px;
@@ -39,3 +35,10 @@ hr {
   padding: 0 0 1em 0;
 }
 
+.margin_0 {
+  margin: 0;
+}
+
+.select_new_rating{
+  margin: 0 0 1em 0;
+}
