--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -34,8 +34,8 @@ hr {
   padding: 0 0 1em 0;
 }
 
-.margin_0 {
-  margin: 0;
+.margin_5 {
+  margin: 5px;
 }
 
 .select_new_rating {
@@ -45,4 +45,8 @@ hr {
 .no_results {
   text-align: center;
   padding: 1em;
+}
+
+.th_center {
+  text-align: center;
 }
